# cmake-registry

./: CMakeLists.txt  README.md  cmake-manager  cmake-registry  cmake-registry.in
