cmake_minimum_required(VERSION 3.3)
project(cmake-registry VERSION 0.3.2 LANGUAGES NONE)

configure_file(${PROJECT_NAME}.in ${PROJECT_NAME} @ONLY)
install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME} DESTINATION bin)
install(FILES LICENSE README.md DESTINATION share/doc/${PROJECT_NAME}-${PROJECT_VERSION})

list(APPEND CPACK_GENERATOR TGZ)
set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
set(CPACK_SYSTEM_NAME ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})
set(CPACK_PACKAGE_CONTACT "igsha@users.noreply.github.com")
include(CPack)
